--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-129803213-2" defer></script>
 <script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,7 +12,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About NephronAI</title>
-<meta name="description" content="Know About NephronAI - an AI project to use AI to fight Chronic Kidney Disease. Bootstrap Theme by uicookies.com">
+<meta name="description" content="Know About NephronAI - an AI project that uses AI to fight Chronic Kidney Disease. &copy; NightLight AI">
 <meta name="keywords" content="NephronAI, about nephronai, nightlight ai, about">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
@@ -45,7 +45,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -160,7 +160,7 @@ But if chronic kidney disease is detected early then we can easily save thousand
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
