--- a/classify.html
+++ b/classify.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Classify Chronic Kidney Disease</title>
 <meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
-<meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai">
+<meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai, nephron, ayush, anand">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -35,7 +35,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -211,7 +211,7 @@
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
