--- a/contribute.html
+++ b/contribute.html
@@ -13,8 +13,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NephronAI | Contribute</title>
-<meta name="description" content="Free Bootstrap Theme by NightLight AI.com">
-<meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+<meta name="description" content="Help us grow bigger. Contribute to Nephron AI - an AI project that uses AI to fight Chronic Kidney Disease.">
+<meta name="keywords" content="AI, Chronic Kidney Disease, Ayush Anand, Ayush, Anand, NightLight, Nephron AI, Nephron">
 <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -46,7 +46,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2019 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -159,7 +159,7 @@
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2019 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
