Fixed Technical issues with cause.html

--- a/cause.html
+++ b/cause.html
@@ -67,7 +67,7 @@
             <input type="radio" name="q1" value="0.1">Yes, I go in intervals of less than 30 minutes
             <input type="radio" name="q1" value="-0.05">No, everything seems normal
             <input type="radio" name="q1" value="0">I didn't note it
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q2">
@@ -78,7 +78,7 @@
             <input type="radio" name="q2" value="0.1">Yes, it has cosiderably increased
             <input type="radio" name="q2" value="-0.05">No, it's almost same
             <input type="radio" name="q2" value="0">I missed noting it
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q3">
@@ -89,7 +89,7 @@
             <input type="radio" name="q3" value="0.1">Yes, I often feel tired
             <input type="radio" name="q3"  value="-0.05">No, that's not true
             <input type="radio"  name="q3" value="0">Can't say
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q4">
@@ -100,7 +100,7 @@
             <input type="radio"  name="q4" value="0.1">Yes
             <input type="radio" name="q4" value="-0.05">No
             <input type="radio" name="q4" value="0">I fear my power has considerably changed
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q5">
@@ -111,7 +111,7 @@
             <input type="radio" name="q5" value="0.1">Yes, I now feel it more often
             <input type="radio" name="q5" value="-0.05">No, I didn't feel anything like that
             <input type="radio" name="q5"  value="0">I actually didn't observe
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q6">
@@ -122,7 +122,7 @@
             <input type="radio" name="q6" value="0.1">Yes, I have some
             <input type="radio" name="q6" value="-0.05">No, that's not my case
             <input type="radio" name="q6" value="0">But why are you asking that to me
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q7">
@@ -133,7 +133,7 @@
             <input type="radio" name="q7" value="0.1">No, that was unexplained
             <input type="radio" name="q7" value="-0.05">Yes, I know that's different from a disease
             <input type="radio" name="q7" value="0">I didn't lose my weight considerably
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q8">
@@ -144,7 +144,7 @@
             <input type="radio" name="q8" value="0.1">Yes, how did you know
             <input type="radio" name="q8" value="-0.05">No. As per my knowledge there's nobody.
             <input type="radio" name="q8" value="0">I don't know
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q9">
@@ -155,7 +155,7 @@
             <input type="radio" name="q9" value="0.1">Yes, I am
             <input type="radio" name="q9" value="-0.05">No
             <input type="radio" name="q9" value="0">I can't remember
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q10">
@@ -166,7 +166,7 @@
             <input type="radio" name="q10" value="0.1">Yes, my nails aren't smooth also
             <input type="radio" name="q10" value="-0.05">No, they are all normal
             <input type="radio" name="q10" value="0">I prefer not to share
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q11">
@@ -177,7 +177,7 @@
             <input type="radio" name="q11" value="0.142857142857143">Yes, I also went to the doctor
             <input type="radio" name="q11" value="-0.0714285714285714">No
             <input type="radio" name="q11" value="0">Can't say
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q12">
@@ -188,7 +188,7 @@
             <input type="radio" name="q12" value="0.142857142857143">Yes, that's quite often
             <input type="radio" name="q12" value="-0.0714285714285714">No, nothing like that although
             <input type="radio" name="q12" value="0">I am heart patient already
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q13">
@@ -199,7 +199,7 @@
             <input type="radio" name="q13" value="0.142857142857143">No, but I didn't do anything causing strain
             <input type="radio" name="q13" value="-0.0714285714285714">Yes, that's because of my work environment
             <input type="radio" name="q13" value="0">I didn't note it
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q14">
@@ -210,7 +210,7 @@
             <input type="radio" name="q14"  value="0.142857142857143">Yes, those are frequent
             <input type="radio" name="q14" value="-0.0714285714285714">No, I didn't experience any
             <input type="radio" name="q14" value="0">I can't remember
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q15">
@@ -221,7 +221,7 @@
             <input type="radio" name="q15" value="0.142857142857143">I experience them frequently
             <input type="radio" name="q15" value="-0.0714285714285714">I don't experience them
             <input type="radio" name="q15" value="0">I prefer not to say
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q16">
@@ -232,7 +232,7 @@
             <input type="radio" name="q16" value="1">Yes, I have one
             <input type="radio" name="q16" value="-1">No, there's no one in my family
             <input type="radio" name="q16" value="0">I don't know
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q17">
@@ -243,7 +243,7 @@
             <input type="radio" name="q17" value="0.166666666666667">Yes, I do currently (or in the past were)
             <input type="radio" name="q17" value="-0.0833333333333333">No, I don’t
             <input type="radio" name="q17" value="0">I don’t wish to tell
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q18">
@@ -254,7 +254,7 @@
             <input type="radio" name="q18" value="0.166666666666667">I use them quite often
             <input type="radio" name="q18" value="-0.0833333333333333">I don’t use anything like that
             <input type="radio" name="q18" value="0">I can't figure out what you mean
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q19">
@@ -265,7 +265,7 @@
             <input type="radio" name="q19" value="0.166666666666667">I feel it very often
             <input type="radio" name="q19" value="-0.0833333333333333">I haven't felt that yet
             <input type="radio" name="q19" value="0">I don't know what it is
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q20">
@@ -276,7 +276,7 @@
             <input type="radio" name="q20" value="0.166666666666667">Yes, I do (indeed frequently)
             <input type="radio" name="q20" value="-0.0833333333333333">No, I don't
             <input type="radio" name="q20" value="0">I actually didn't observe
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q21">
@@ -287,7 +287,7 @@
             <input type="radio" name="q21" value="0.166666666666667">Yes, I do experience
             <input type="radio" name="q21" value="-0.0833333333333333">No, I don’t
             <input type="radio" name="q21" value="0">I actually didn't observe
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q22">
@@ -298,7 +298,7 @@
             <input type="radio" name="q22" value="0.166666666666667">Yes, that wasn’t because of a normal infection
             <input type="radio" name="q22" value="-0.0833333333333333">No, that's not true
             <input type="radio" name="q22" value="0">I didn’t have anything like that
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q23">
@@ -309,7 +309,7 @@
             <input type="radio" name="q23" value="0.142857142857143">Yes, I often feel tired
             <input type="radio" name="q23" value="-0.0714285714285714">No, that's not true
             <input type="radio" name="q23" value="0">Can't say
-            <input type="submit" value="Next" class="next">
+            <input type="submit" value="Next" class="next btn btn-primary">
         </form>
     </div>
     <div class="q24">
